# crawler_fw

./: CMakeLists.txt  Makefile  README.md
include/: dataset_stream_reader.h  direct_process_pipeline.h  frame.h  gstream_client.h  network_stream_logger.h  network_stream_reader.h  pubsub_client.h  resource_manager copy.h  resource_manager.h
src/: dataset_stream_reader.cpp  gstream_client.cpp  network_stream_logger.cpp  network_stream_reader.cpp  pubsub_client.cpp
tests/: CMakeLists.txt  Makefile  dataset_stream_reader_test.cpp  gstream_client_test.cpp  network_stream_logger_test.cpp  network_stream_reader_test.cpp  pubsub_client_test.cpp  resource_manager_test.cpp  test_file.mkv  test_video_source.h  unittest
utils/: image_utils.h
